jasn/examples/invalid/unclosed_object.jasn
// Unclosed object
{
  key: "value",
  nested: {
    bad: "no close"
